--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yesra | Portfolio</title>
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/mediaqueries.css" />
   </head>
-  <body></body>
+  <body>
+    <nav id="desktop-nav">
+      <div class="logo">Yesra Fatima</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="/">About</a></li>
+          <li><a href="/">Experience</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="/">Contact me</a></li>
+        </ul>
+      </div>
+    </nav>
+    <script src="/index.js"></script>
+  </body>
 </html>
