--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="/">About</a></li>
           <li><a href="/">Experience</a></li>
           <li><a href="/">Projects</a></li>
-          <li><a href="/">Contact me</a></li>
+          <li><a href="/">Contact</a></li>
         </ul>
       </div>
     </nav>
