--- a/index.html
+++ b/index.html
@@ -12,13 +12,29 @@
       <div class="logo">Yesra Fatima</div>
       <div>
         <ul class="nav-links">
-          <li><a href="/">About</a></li>
-          <li><a href="/">Experience</a></li>
-          <li><a href="/">Projects</a></li>
-          <li><a href="/">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <script src="/index.js"></script>
+    <nav id="hamburger-nav">
+      <div class="logo">Yesra Fatima</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu-links">
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+        </div>
+      </div>
+    </nav>
+    <script src="index.js"></script>
   </body>
 </html>
