social profile added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,42 @@
         </div>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section_pic-container">
+        <img src="/assets/mypic.png" alt="Yesra Fatima profile picture" />
+      </div>
+      <div class="section_text">
+        <p class="section_text_p1">Hola,I'm</p>
+        <h1 class="title">Yesra Fatima</h1>
+        <p class="section_text_p2">Frontend Developer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('assets/Yesra-resume.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>
+        <div id="" social-container>
+          <img
+            src="./assets/linkedin.png"
+            alt="My LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://linkedin.com/in/yesra-fatima'"
+          />
+
+          <img
+            src="./assets/github.png"
+            alt="My GitHub profile"
+            class="icon"
+            onclick="location.href='https://github.com/yesra29'"
+          />
+        </div>
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
