--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </nav>
+
     <section id="profile">
       <div class="section_pic-container">
         <img src="/assets/mypic.png" alt="Yesra Fatima profile picture" />
@@ -74,7 +75,7 @@
         src="./assets/arrow.png"
         alt="arrow-icon"
         class="icon arrow"
-        onclick="location.href='./about'"
+        onclick="location.href='./#about'"
       />
     </section>
 
@@ -129,7 +130,7 @@
         src="./assets/arrow.png"
         alt="arrow-icon"
         class="icon arrow"
-        onclick="location.href='./experience'"
+        onclick="location.href='./#experience'"
       />
     </section>
 
@@ -323,9 +324,91 @@
         src="./assets/arrow.png"
         alt="arrow-icon"
         class="icon arrow"
-        onclick="location.href='./Projects'"
+        onclick="location.href='./#Projects'"
       />
     </section>
+
+    <section id="Projects">
+      <p class="section_text_p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img
+              src="./assets/project-1.png"
+              alt="projects 1"
+              class="project-img"
+            />
+          </div>
+          <h2 class="experience-sub-title project-title">Project One</h2>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/yesra29/amazon_clone'"
+            >
+              GitHub
+            </button>
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/yesra29/amazon_clone'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img
+              src="./assets/project-2.png"
+              alt="projects 2"
+              class="project-img"
+            />
+          </div>
+          <h2 class="experience-sub-title project-title">Project Two</h2>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/yesra29/myPortfolio.git'"
+            >
+              GitHub
+            </button>
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/yesra29/myPortfolio.git'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img
+              src="./assets/project-3.png"
+              alt="projects 1"
+              class="project-img"
+            />
+          </div>
+          <h2 class="experience-sub-title project-title">Project Three</h2>
+          <div class="btn-container">
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/yesra29/Portfolio.git'"
+            >
+              GitHub
+            </button>
+            <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/yesra29/Portfolio.git'"
+            >
+              Live Demo
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="index.js"></script>
   </body>
 </html>
