--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <li><a href="#Projects">Projects</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -41,7 +41,7 @@
         <img src="/assets/mypic.png" alt="Yesra Fatima profile picture" />
       </div>
       <div class="section_text">
-        <p class="section_text_p1">Hola,I'm</p>
+        <p class="section_text_p1">Hola, I'm</p>
         <h1 class="title">Yesra Fatima</h1>
         <p class="section_text_p2">Frontend Developer</p>
         <div class="btn-container">
@@ -55,7 +55,7 @@
             Contact Info
           </button>
         </div>
-        <div id=" social-container">
+        <div id="social-container">
           <img
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
@@ -177,54 +177,6 @@
                   <p>Basic</p>
                 </div>
               </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
             </div>
           </div>
 
@@ -250,85 +202,23 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>JavaScript</h3>
+                  <h3>Node.js</h3>
                   <p>Basic</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="experience-icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
             </div>
           </div>
         </div>
       </div>
-      <!-- </div>
-      </div> -->
       <img
         src="./assets/arrow.png"
         alt="arrow-icon"
         class="icon arrow"
-        onclick="location.href='./#Projects'"
+        onclick="location.href='./#projects'"
       />
     </section>
 
-    <section id="Projects">
+    <section id="projects">
       <p class="section_text_p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
@@ -387,7 +277,7 @@
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
-                alt="projects 1"
+                alt="projects 3"
                 class="project-img"
               />
             </div>
@@ -395,13 +285,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/yesra29/Portfolio.git'"
+                onclick="location.href='https://github.com/yesra29/museum_chatbot'"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/yesra29/Portfolio.git'"
+                onclick="location.href='https://github.com/yesra29/museum_chatbot'"
               >
                 Live Demo
               </button>
@@ -412,43 +302,32 @@
     </section>
 
     <section id="contact">
-      <p class="section_text_p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
-      <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="mailto:fyesra0@gmail.com">fyesra0@gmail.com</a></p>
-        </div>
-
-        <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon icon"
-            class="icon contact-icon"
-          />
-          <p><a href="https://linkedin.com/in/yesra-fatima">LinkedIn</a></p>
-        </div>
+      <p class="section_text_p1">Connect With Me</p>
+      <h1 class="title">Contact</h1>
+      <div class="btn-container">
+        <button
+          class="btn btn-color-2"
+          onclick="window.open('https://linkedin.com/in/yesra-fatima')"
+        >
+          LinkedIn
+        </button>
+        <button
+          class="btn btn-color-1"
+          onclick="window.open('mailto:yesra29@example.com')"
+        >
+          Send Email
+        </button>
       </div>
     </section>
-
-    <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <p>Copyright &#169; 2024 Yesra Fatima. All Rights Reserved.</p>
-    </footer>
-
-    <script src="index.js"></script>
   </body>
+  <script>
+    const toggleMenu = () => {
+      const menu = document.querySelector(".menu-links");
+      if (menu.style.maxHeight) {
+        menu.style.maxHeight = null;
+      } else {
+        menu.style.maxHeight = menu.scrollHeight + "px";
+      }
+    };
+  </script>
 </html>
