--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
           </div>
 
-          <div class="details-container">
+          <!-- <div class="details-container">
             <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
@@ -207,7 +207,7 @@
                 </div>
               </article>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
@@ -285,13 +285,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/yesra29/museum_chatbot'"
+                onclick="location.href='https://https://github.com/yesra29/Portfolio.git'"
               >
                 GitHub
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/yesra29/museum_chatbot'"
+                onclick="location.href='https://https://github.com/yesra29/Portfolio.git'"
               >
                 Live Demo
               </button>
@@ -299,6 +299,12 @@
           </div>
         </div>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow-icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
     </section>
 
     <section id="contact">
@@ -311,12 +317,14 @@
         >
           LinkedIn
         </button>
-        <button
-          class="btn btn-color-1"
-          onclick="window.open('mailto:yesra29@example.com')"
-        >
-          Send Email
-        </button>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-1"
+            onclick="window.open('mailto:fyesra0@gmail.com')"
+          >
+            Send Email
+          </button>
+        </div>
       </div>
     </section>
   </body>
